--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_split_canvas"
-version = "0.1.0"
+version = "0.18.0"
 edition = "2024"
 license = "MIT OR Apache-2.0"
 description = "A Bevy plugin to split the WASM canvas into multiple canvases."
@@ -13,8 +13,14 @@ exclude = [
     "assets/*",
 ]
 
+[dependencies.bevy]
+version = "0.18.0"
+default-features = false
+features = [
+    "bevy_render"
+]
+
 [dependencies]
-bevy = "0.17.3"
 wasm-bindgen = "0.2.106"
 web-sys = { version = "0.3.83", default-features = false, features = [
     "Window",
